--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.58.5",
     "@react-three/fiber": "^8.12.0",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.9.1",
     "maath": "^0.5.3",
     "react": "^18.2.0",
@@ -19,7 +23,8 @@
     "react-parallax-tilt": "^1.7.120",
     "react-router-dom": "^6.9.0",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
